# informative-path-planning

./: .gitignore  README.md  all_mse_dist_stats.txt  all_mse_stats.txt  analysis_utils.py  aq_library.py  bag_utils.py  belief.py  car_trial_analysis.py  compression_script.sh  continuous.py  continuous2.py  continuous_MCTS.py  continuous_traj.py  data_processing.ipynb  data_processing.py  demo.ipynb  dubins_curves.ipynb  envmodel_library.py  evaluate_star_convergence.py  evaluation_library.py  full_pointsonly_corridor_stats.txt  fullyreachable_points_cost_dist_stats.txt  fullyreachable_points_cost_stats.txt  gpmodel_library.py  hist_analysis.py  informative-planning.py  ipp.ipynb  ipp_library.py  main.py  mcts.py  mcts_library.py  model.py  myopic_experiments.py  new_figure.py  nonmyopic_experiments.py  nonmyopic_ipp.ipynb  obstacles.py  paper_figures.py  past_figure.py  (+14 more)
.ipynb_checkpoints/: dubins_curves-checkpoint.ipynb  ipp-checkpoint.ipynb
composit_planner/: CMakeLists.txt  README.md  package.xml
plumes/: package.xml
python_scripts/: aq_library.py  bag_utils.py  car_trial_analysis.py  config.yaml  continuous.py  continuous_traj.py  demo.ipynb  envmodel_library.py  evaluation_library.py  figure_seminar.py  gpmodel_library.py  gradient_update.py  myopic_experiments.py  nonconvex_env_test.py  nonconvex_exp.py  nonmyopic_experiments.py  past_figure.py  paths_library.py  real_data_experiments.py  robot_library.py  run_sim_all.sh  sensor_library.py  star_eval.py
scripts/: aq_library.py  data_processing.ipynb  data_processing.py  (+11 more)
src/grid_map_ipp/: package.xml
src/grid_map_ipp/config/: world.yaml
src/grid_map_ipp/include/: grid_map_ipp.hpp
src/grid_map_ipp/include/grid_map_ipp/: ObstacleGridConverter.hpp  grid_map_ipp.hpp  grid_map_sdf.hpp  util.hpp
src/grid_map_ipp/launch/: test.launch
src/grid_map_ipp/python/: binding.cpp  example.cpp
src/grid_map_ipp/src/: ObstacleGridConverter.cpp  grid_map_ipp.cpp
src/grid_map_ipp/test/: test_gt_map.cpp  test_lidar.cpp
src/test/: package.xml
src/test/src/: test_gt_map.cpp  test_lidar.cpp
(+109 files in other folders)
