<?xml version="1.0"?>
<package>
  <name>test_grid_map</name>
  <version>1.0.0</version>
  <description>The Autonomous Exploration Planner package</description>

  <maintainer email="magse761@student.liu.se">Magnus Selin</maintainer>

  <license>BSD-3-Clause</license>

  <author>Magnus Selin</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>